@@ -5,3 +5,4 @@ add_subdirectory(fost-crypto)
 add_subdirectory(fost-datetime)
 add_subdirectory(fost-sinks)
 add_subdirectory(fost-test)
+add_subdirectory(minit)
