@@ -1,0 +1,2 @@
+add_executable(minit minit.c)
+install(TARGETS minit EXPORT minit RUNTIME DESTINATION bin)
