@@ -1,3 +1,6 @@
+2019-05-09  Kirit Saelensminde  <kirit@felspar.com>
+ Add `bin/minit` back into project.
+
 2019-04-25  Kirit Saelensminde  <kirit@felspar.com>
  Add a setting, `fostlib::test::c_files_folder`, describing the root folder tests should use if they need access to the file system.
 
